tests/golden/errors/binding_after_effect.stderr
error[formatting]: bindings precede the effects in a body: every binding runs before every bare effect line, so move it above the chain
  --> binding_after_effect.kso:2:8
   2 | cups = 4
              ^
